test/libyul/yulSyntaxTests/invalid/push0_disallowed.yul
// Based on ./push_disallowed.yul (which already includes push0).
{
    push0()
}
// ----
// DeclarationError 4619: (72-77): Function "push0" not found.
